--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Voice to Text – Free Browser Speech‑to‑Text Tool" />
   <meta property="og:description" content="Real‑time voice recognition using your browser. Fast, accurate, and private." />
   <meta property="og:type" content="website" />
-
+  <meta property="og:url" content="https://voicetotext-drab.vercel.app/" />
   
 
   <!-- Twitter Cards -->
@@ -24,8 +24,8 @@
   <meta name="twitter:description" content="Convert voice to text directly in your browser using the Web Speech API." />
  
 
-  <!-- Canonical URL -->
-
+ <!-- Canonical URL -->
+  <link rel="canonical" href="https://voicetotext-drab.vercel.app/" />
 
   <!-- CSS + Accessibility Improvements -->
   <style>
@@ -61,7 +61,10 @@
         <div>
           <h1>Voice to Text – Free Online Speech to Text Tool</h1>
           <p class="lead">Live voice recognition using the Web Speech API — everything runs locally in your browser for maximum privacy.</p>
+<h2>✅ Go to 100+ premium-quality voices for free with <strong><a href="https://www.speech-typing.com/" title="Online Free speech to text Converter tool">Speech Typing</a></strong>.</h2>
+
         </div>
+		
         <div class="status">
           <span id="status" class="pill">Idle</span>
         </div>
